# HayMedics-Data-Analyser

./: .env.example  .gitignore  LICENSE  README.md  app.py  brand.py  findings.py  pipeline.py  pyproject.toml  questions.py  test_drift.py
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: dirty_healthcare.csv  messy_survey.csv
scripts/: make_dirty_healthcare.py  make_messy_survey.py
src/hma/: __init__.py  agents.py  analyst.py  brand.py  charts.py  config.py  ledger.py  llm.py  loaders.py  ops.py  pipeline.py  profiling.py  report.py  survey.py
tests/: test_app.py  test_charts.py  test_core.py  test_drift.py  test_loading.py  test_pipeline.py  test_values.py
